--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postcss-preset-env": "^7.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.2",
+    "react-firebaseui": "^6.0.0",
     "tailwindcss": "^3.0.19"
   },
   "devDependencies": {
