--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.2",
     "react-firebaseui": "^6.0.0",
+    "react-hook-form": "^7.27.0",
     "tailwindcss": "^3.0.19"
   },
   "devDependencies": {
